# borough-rust

./: Cargo.toml  README.md
infra/: docker-compose.yml
observability/: jaeger.yml  prometheus.yml
scripts/: build-all.ps1  build-all.sh  generate-services.ps1  start-infra.ps1  start-infra.sh
services/auth-service/: .env.example  Cargo.toml  Dockerfile  README.md  setup-services.bat  setup-services.sh  status-services.bat  status-services.sh  stop-services.bat  stop-services.sh
services/auth-service/migrations/: .gitkeep  20250805102246_init.down.sql  20250805102246_init.up.sql
services/auth-service/src/: main.rs
services/auth-service/src/application/: mod.rs
services/auth-service/src/application/use_cases/: login_use_case.rs  mod.rs  otp_use_case.rs  password_reset_use_case.rs  refresh_token_use_case.rs  security_question_use_case.rs
services/auth-service/src/cache/: auth_cache.rs  mod.rs  otp_cache.rs
services/auth-service/src/cache/tests/: auth_cache_service_tests.rs  otp_cache_service_tests.rs
services/auth-service/src/config/: mod.rs
services/auth-service/src/config/pipeline/: controller_setup.rs  database_setup.rs  env_setup.rs  mod.rs  queue_setup.rs  redis_setup.rs  service_setup.rs
services/auth-service/src/config/routing/: mod.rs
services/auth-service/src/domain/: mod.rs
services/auth-service/src/domain/entities/: audit_log.rs  blacklisted_token.rs  login_attempt.rs  mod.rs  password_reset_token.rs  refresh_token.rs  security_question.rs  user.rs  user_permission.rs  user_security_question.rs  user_session.rs
services/auth-service/src/domain/repositories/: login_attempt_repository.rs  mod.rs  password_reset_repository.rs  refresh_token_repository.rs  security_repository.rs  user_repository.rs
services/auth-service/src/domain/services/: auth_domain_service.rs  mod.rs  security_domain_service.rs
services/auth-service/src/grpc/: health.rs
services/auth-service/src/infrastructure/: mod.rs
services/auth-service/src/infrastructure/config/: mod.rs
services/auth-service/src/infrastructure/database/: login_attempt_repository_impl.rs  mod.rs  password_reset_repository_impl.rs  refresh_token_repository_impl.rs  security_question_repository_impl.rs  user_repository_impl.rs
services/auth-service/src/infrastructure/messaging/: mod.rs  notification_consumer.rs  notification_publisher.rs
services/auth-service/src/interface/: mod.rs
services/auth-service/src/interface/controllers/: auth_controller.rs  mod.rs  otp_controller.rs  password_controller.rs  refresh_token_controller.rs  security_question_controller.rs
services/auth-service/src/interface/grpc/: auth_validation_service.rs  health_service.rs  mod.rs
services/auth-service/src/interface/middleware/: auth_middleware.rs  mod.rs  rate_limiter.rs  request_logger.rs
services/auth-service/src/interface/routes/: auth_routes.rs  health_routes.rs  mod.rs
services/auth-service/tests/: .gitkeep
services/booking-service/: Cargo.toml
services/booking-service/src/: main.rs
services/booking-service/src/application/: mod.rs
services/external-comm-service/: Cargo.toml
services/external-comm-service/src/: main.rs
services/feedback-service/: Cargo.toml
services/feedback-service/src/: main.rs
services/notification-service/: Cargo.toml
services/notification-service/src/: main.rs
services/property-service/: Cargo.toml
services/property-service/src/: main.rs
services/property-service/src/interface/: routes.rs
services/search-service/: Cargo.toml
services/search-service/src/: main.rs
services/transaction-service/: Cargo.toml
services/transaction-service/src/: main.rs
services/user-service/: Cargo.toml
services/user-service/src/: main.rs
shared/: Cargo.toml
shared/src/: grpc_clients.rs  lib.rs
shared/src/config/: database_config.rs  jwt_config.rs  messaging_config.rs  mod.rs  otp_config.rs  redis_config.rs  server_config.rs
shared/src/entities/: mod.rs
shared/src/entities/dtos/auth/: auth.rs  mod.rs  otp.rs  password.rs  question.rs  token.rs
shared/src/entities/enums/: mod.rs
shared/src/entities/models/: mod.rs
shared/src/events/: mod.rs
shared/src/events/user_event/: mod.rs  user_created_event.rs  user_updated_event.rs
shared/src/features/: errors.rs  mod.rs
shared/src/features/helper/: jwt_helper.rs  mod.rs  otp_helper.rs  password_helper.rs  security_question_helper.rs
shared/src/features/security/jwt/: mod.rs
shared/src/user/models/dto/: request.rs
shared/src/utils/: mod.rs
shared/src/utils/caching/: mod.rs
shared/src/utils/messaging/: mod.rs
(+14 files in other folders)
