[workspace]
members = [
    "shared",
    "services/auth-service",
    "services/user-service", 
    "services/property-service",
    "services/booking-service",
    "services/transaction-service",
    "services/notification-service",
    "services/feedback-service",
    "services/search-service",
    "services/external-comm-service",
]

resolver = "2"

[workspace.dependencies]
# Web Framework
actix-web = "4.11.0"
actix-cors = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
futures-util = "0.3.31"
tokio-amqp = "2.0.0"

# gRPC
tonic = "0.14.0"
tonic-build = "0.14.0"
prost = "0.14.1"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
redis = { version = "1.0.0-alpha", features = ["tokio-comp"] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Utilities
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.98"
thiserror = "2.0.12"
argon2 = "0.5.3"

# Configuration
config = "0.15.13"
dotenv = "0.15.0"

# Async Runtime
futures = "0.3.31"

# Message Queue
lapin = { version = "3.1.0" }

# Observability
opentelemetry = "0.30.0"
opentelemetry-jaeger = "0.22.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-opentelemetry = "0.31.0"

# Security
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"

# Search
meilisearch-sdk = "0.29.1"

# Additional dependencies
rand = "0.9.2"
rust_decimal = { version = "1.37.2", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
hex = "0.4.3"
dotenvy = "0.15.7"
